fixed include directive to work for case sensitive compilers

--- a/main.tex
+++ b/main.tex
@@ -10,7 +10,7 @@
 \usepackage{showexpl}
 \usepackage{listings}
 
-\input{avrListing.tex}
+\input{AVRListing.tex}
 
 
 %\lstloadlanguages{[AVR]Assembler}%
